@@ -6,6 +6,7 @@ version 0.8.1-rc -
  . CocosDenshion: SimpleAudioEngine can stop sounds (issue #498)
  . Parallax: update children at draw (issue #471)
  . TileMap: TMX maps starts at 0,0 position (part of issue #462)
+ . TileMap: TMX getter/setters works OK with async maps (issue #506)
  . TileMap: anchorPoint works OK (issue #508)
  . XCode: COCOS2D_DEBUG used instead of DEBUG (issue #507)
  
